Desktop Page Info/Views: Fix icon getting the wrong color on permission changes.

An extra call to color_utils::DeriveDefaultIconColor() was causing the icon
color to change to one that was too light after a permission is changed via the
Page Info bubble. Fix by removing it.

Bug: 804264
Change-Id: If2f791f0df182c7e698f0e8fd0db04cf58b18147
Reviewed-on: https://chromium-review.googlesource.com/879641
Reviewed-by: Raymes Khoury <raymes@chromium.org>
Commit-Queue: Patti <patricialor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531124}
Former-commit-id: 670de664b3b363f810b2eecd144ea470b9d9f086